--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -72,7 +72,7 @@ body {
 							</div>
 						</form>
 						<p class="text-center mt-3">
-							Already have an account? <a href="signin.html">Sign in</a>
+							Already have an account? <a href="/signIn">Sign in</a>
 						</p>
 					</div>
 				</div>
