--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -55,7 +55,7 @@ body {
 							</div>
 						</form>
 						<p class="text-center mt-3">
-							Don't have an account? <a href="/signup">Sign up</a>
+							Don't have an account? <a href="/signUp">Sign up</a>
 						</p>
 					</div>
 				</div>
