--- a/src/main/resources/templates/communityPost.html
+++ b/src/main/resources/templates/communityPost.html
@@ -16,16 +16,18 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <style>
 body {
-	background-color: #f0f8ea;
-	font-family: 'Arial', sans-serif;
+	font-family: 'Poppins', sans-serif;
+	background-color: #e8f5e9;
+	background-image:
+		url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2381c784' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .navbar {
-	background-color: #2c5e1a;
+	background-color: #4caf50;
 }
 
 .navbar-brand, .nav-link {
-	color: #ffffff !important;
+	color: white !important;
 }
 
 .forum-post {
@@ -104,15 +106,25 @@ body {
 	font-size: 0.8rem;
 	padding: 0.2rem 0.5rem;
 }
+
+.search-input {
+	flex-grow: 1;
+	min-width: 300px;
+}
+
+@media ( min-width : 768px) {
+	.search-input {
+		min-width: 400px;
+	}
+}
 </style>
 
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
-				Green Haven Forum</a>
+			<a class="navbar-brand" href="#">GardenGenius</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
@@ -121,18 +133,10 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="/userhome"><i
-							class="fas fa-home"></i> Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="/post"><i
-							class="fas fa-user"></i> Post</a></li>
-					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-users"></i>communityPost</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantidentification"><i class="fas fa-seedling"></i>
-							Plant Identifier</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
-							Advisor</a></li>
+					<li class="nav-item"><a class="nav-link" href="/userhome">Home</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="#"
+						id="logoutBtn">Logout</a></li>
 				</ul>
 			</div>
 		</div>
@@ -142,11 +146,21 @@ body {
 	<div class="container mt-5">
 		<h1 class="mb-4">Community Forum</h1>
 
-		<div class="input-group mb-4">
+		<!-- <div class="input-group mb-4">
 			<input type="text" class="form-control" id="searchInput"
 				placeholder="Search posts by title">
 			<button class="btn btn-outline-success" id="searchButton"
 				onclick="searchPosts()">Search</button>
+		</div> -->
+		<div class="row justify-content-center mb-4">
+			<div class="col-md-8">
+				<form id="searchForm" class="d-flex">
+					<input type="text" class="form-control me-2 search-input"
+						id="searchInput" placeholder="Search posts by title">
+					<button class="btn btn-success" id="searchButton"
+						onclick="searchPosts()" type="button">Search</button>
+				</form>
+			</div>
 		</div>
 
 		<!-- Forum Posts Container -->
