--- a/src/main/resources/templates/editprofile.html
+++ b/src/main/resources/templates/editprofile.html
@@ -81,10 +81,8 @@ h1 {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="home.html">Home</a>
+					<li class="nav-item"><a class="nav-link" href="/userhome">Home</a>
 					</li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="#">Edit Profile</a></li>
 					<li class="nav-item"><a class="nav-link" href="#"
 						id="logoutBtn">Logout</a></li>
 				</ul>
@@ -96,10 +94,10 @@ h1 {
 		<h1 class="text-center mb-4">Edit Your Profile</h1>
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<img src="/placeholder.svg?height=150&width=150"
-					alt="Profile Picture" class="profile-picture"
-					id="currentProfilePicture"> <input type="file"
-					id="profileImageInput" accept="image/*" class="form-control mt-3">
+				<img src="/api/placeholder/150/150" alt="Profile Picture"
+					class="profile-picture" id="currentProfilePicture"> <input
+					type="file" id="profileImageInput" accept="image/*"
+					class="form-control mt-3">
 				<button id="removeImageBtn" class="btn btn-danger mt-2">Remove
 					Image</button>
 			</div>
