--- a/src/main/resources/templates/plantidentification.html
+++ b/src/main/resources/templates/plantidentification.html
@@ -164,10 +164,9 @@ body {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
-				Green Haven Forum</a>
+			<a class="navbar-brand" href="#">GardenGenius</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
@@ -176,18 +175,10 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="/userhome"><i
-							class="fas fa-home"></i> Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="/post"><i
-							class="fas fa-user"></i> Post</a></li>
-					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-users"></i> communityPost</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantidentification"><i class="fas fa-seedling"></i>
-							Plant Identifier</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
-							Advisor</a></li>
+					<li class="nav-item"><a class="nav-link" href="/userhome">Home</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="#"
+						id="logoutBtn">Logout</a></li>
 				</ul>
 			</div>
 		</div>
