--- a/src/main/resources/templates/plantsearch.html
+++ b/src/main/resources/templates/plantsearch.html
@@ -12,15 +12,18 @@
 	rel="stylesheet">
 <style>
 body {
-	background-color: #f0f8ea;
+	font-family: 'Poppins', sans-serif;
+	background-color: #e8f5e9;
+	background-image:
+		url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2381c784' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .navbar {
-	background-color: #2c5e1a;
+	background-color: #4caf50;
 }
 
 .navbar-brand, .nav-link {
-	color: #ffffff !important;
+	color: white !important;
 }
 
 .card {
@@ -47,10 +50,9 @@ body {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
-				Green Haven Forum</a>
+			<a class="navbar-brand" href="#">GardenGenius</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
@@ -59,18 +61,10 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="/userhome"><i
-							class="fas fa-home"></i> Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="/post"><i
-							class="fas fa-user"></i> Post</a></li>
-					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-users"></i> communityPost</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantidentification"><i class="fas fa-seedling"></i>
-							Plant Identifier</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
-							Advisor</a></li>
+					<li class="nav-item"><a class="nav-link" href="/userhome">Home</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="#"
+						id="logoutBtn">Logout</a></li>
 				</ul>
 			</div>
 		</div>
