--- a/src/main/resources/templates/plantidentification.html
+++ b/src/main/resources/templates/plantidentification.html
@@ -12,9 +12,18 @@
 	rel="stylesheet">
 <style>
 body {
-	background-color: #f0f8ea;
-	background-size: 20px 35px;
-	/* font-family: 'Arial', sans-serif; */
+	font-family: 'Poppins', sans-serif;
+	background-color: #e8f5e9;
+	background-image:
+		url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2381c784' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.navbar {
+	background-color: #4caf50;
+}
+
+.navbar-brand, .nav-link {
+	color: white !important;
 }
 
 .main-container {
@@ -24,14 +33,6 @@ body {
 	margin-top: 30px;
 	margin-bottom: 30px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
-.navbar {
-	background-color: #2c5e1a;
-}
-
-.navbar-brand, .nav-link {
-	color: #ffffff !important;
 }
 
 .card {
