--- a/src/main/resources/templates/editprofile.html
+++ b/src/main/resources/templates/editprofile.html
@@ -16,10 +16,12 @@ body {
 	background-color: #e8f5e9;
 	background-image:
 		url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2381c784' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	padding-top: 70px; /* Added to account for fixed navbar */
 }
 
 .navbar {
 	background-color: #4caf50;
+	padding: 10px 0; /* Adjusted padding for normal size */
 }
 
 .navbar-brand, .nav-link {
@@ -32,6 +34,13 @@ body {
 	padding: 30px;
 	margin-top: 30px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .container {
+	background-color: transparent;
+	box-shadow: none;
+	margin-top: 0;
+	padding: 0 15px; /* Added horizontal padding */
 }
 
 h1 {
@@ -70,8 +79,8 @@ h1 {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark">
-		<div class="container-fluid">
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+		<div class="container">
 			<a class="navbar-brand" href="#">GardenGenius</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
