--- a/src/main/resources/templates/communityPost.html
+++ b/src/main/resources/templates/communityPost.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Green Haven Forum</title>
+<title>PlantPulse Forum</title>
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -124,7 +124,7 @@ body {
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">GardenGenius</a>
+			<a class="navbar-brand" href="#">PlantPulse</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
