--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Garden Genius - Sign In</title>
+<title>PlantPulse - Sign In</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -38,7 +38,7 @@ body {
 			<div class="col-md-6">
 				<div class="card">
 					<div class="card-body p-5">
-						<h2 class="card-title text-center mb-4">Garden Genius Sign In</h2>
+						<h2 class="card-title text-center mb-4">PlantPulse Sign In</h2>
 						<form id="signinForm">
 							<div class="mb-3">
 								<label for="username" class="form-label">Username</label> <input
