--- a/src/main/resources/templates/editprofile.html
+++ b/src/main/resources/templates/editprofile.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GardenGenius - Edit Profile</title>
+<title>PlantPulse - Edit Profile</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -81,7 +81,7 @@ h1 {
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">GardenGenius</a>
+			<a class="navbar-brand" href="#">PlantPulse</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
@@ -103,7 +103,7 @@ h1 {
 		<h1 class="text-center mb-4">Edit Your Profile</h1>
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<img src="/api/placeholder/150/150" alt="Profile Picture"
+				<img src="" alt="Profile Picture"
 					class="profile-picture" id="currentProfilePicture"> <input
 					type="file" id="profileImageInput" accept="image/*"
 					class="form-control mt-3">
