--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GardenGenius - Your Smart Gardening Companion</title>
+<title>PlantPulse - Your Smart Gardening Companion</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -51,7 +51,7 @@ body {
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
-				<a class="navbar-brand text-success fw-bold" href="#home">GardenGenius</a>
+				<a class="navbar-brand text-success fw-bold" href="#">PlantPulse</a>
 				<button class="navbar-toggler" type="button"
 					data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false"
@@ -79,7 +79,7 @@ body {
 		<!-- Home Section -->
 		<section id="home" class="hero-section">
 			<div class="container text-center">
-				<h1 class="display-4 text-success mb-3">Welcome to GardenGenius</h1>
+				<h1 class="display-4 text-success mb-3">Welcome to PlantPulse</h1>
 				<p class="lead text-muted">Your smart companion for all things
 					gardening. Get plant advice, identify species, and connect with a
 					community of garden enthusiasts.</p>
@@ -94,7 +94,7 @@ body {
 							<h2 class="card-title text-success">GrowWise Advisor</h2>
 							<p class="card-text" style="text-align: justify;">Get
 								personalized advice on plant care, soil management, and garden
-								planning. (Coming Soon!)</p>
+								planning.</p>
 						</div>
 					</div>
 				</div>
@@ -266,7 +266,7 @@ body {
 					class="fab fa-instagram"></i></a> <a href="#"
 					class="text-white social-icon"><i class="fab fa-github"></i></a>
 			</div>
-			<p>&copy; 2023 GardenGenius. All rights reserved.</p>
+			<p>&copy; 2023 PlantPulse. All rights reserved.</p>
 		</div>
 	</footer>
 
