--- a/src/main/resources/templates/plantidentification.html
+++ b/src/main/resources/templates/plantidentification.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plant Identification - Green Haven Forum</title>
+<title>Plant Identification - PlantPulse Forum</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -167,7 +167,7 @@ body {
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">GardenGenius</a>
+			<a class="navbar-brand" href="#">PlantPulse</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false"
