--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Garden Genius - Sign Up</title>
+<title>PlantPulse - Sign Up</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
@@ -38,7 +38,7 @@ body {
 			<div class="col-md-6">
 				<div class="card">
 					<div class="card-body p-5">
-						<h2 class="card-title text-center mb-4">Garden Genius Sign Up</h2>
+						<h2 class="card-title text-center mb-4">PlantPulse Sign Up</h2>
 						<form id="signupForm">
 							<div class="row mb-3">
 								<div class="col">
